--- a/app/style/css/globals.css
+++ b/app/style/css/globals.css
@@ -144,7 +144,7 @@
 }
 
 .account-form_image-input {
-  @apply cursor-pointer border-none bg-transparent outline-none file:text-blue !important;
+  @apply cursor-pointer border-none bg-transparent outline-none file:text-blue-400 !important;
 }
 
 .account-form_input {
