--- a/app/style/css/globals.css
+++ b/app/style/css/globals.css
@@ -34,7 +34,7 @@
 
   /* thread card  */
   .thread-card_bar {
-    @apply relative mt-2 w-0.5 grow rounded-full bg-neutral-800;
+    @apply relative w-0.5 grow rounded-full bg-neutral-800;
   }
 
   /* User card */
